style fixes to about close button and spacing between paragraphs

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,11 @@ a:hover {
     opacity: 1;
 }
 
+.nav .wrapper .main p {
+	margin-bottom: 10px;
+	letter-spacing: 1px;
+}
+
 .nav .sections .about .main {
 	margin-bottom: 20px;	
 }
@@ -335,6 +340,8 @@ a:hover {
 	height: 26px;
 	font-size: 26px;
 	display: block;
+	position: relative;
+	top: -18px;
 }
 
 .content .info .facebook-link,
